--- a/ssh/config
+++ b/ssh/config
@@ -1,6 +1,9 @@
 Host underwood
 	HostName svorstol.com
 	User esso
+Host crowdshelf
+	HostName crowdshelf.xyz
+	User crowdshelf
 
 Host norkart-azure
 	HostName broytekart.cloudapp.net
