SSH config for Studentmediene

--- a/ssh/config
+++ b/ssh/config
@@ -1,3 +1,7 @@
+Host *.studentmediene.local
+        User esso
+        ProxyCommand ssh -q scgw1.studentmediene.no nc -q0 %h 22
+
 Host underwood
 	HostName svorstol.com
 	User esso
@@ -10,6 +14,7 @@ Host norkart-azure
 Host norkart-svv
     HostName 178.62.101.20
     User svv
+
 Host norkart-svv-root
     HostName 178.62.101.20
     User root
